corrected spilling mistakes

--- a/frontend/src/Components/Organisation/index.css
+++ b/frontend/src/Components/Organisation/index.css
@@ -33,7 +33,7 @@
   outline: none !important;
 }
 
-.distanse{
+.distance{
   color: #1abcd4;
   border-bottom: .1em solid gray;
   padding-bottom: .5em;
